# whitebox-trng

./: .gitignore  README.md  finalAnalysisReport.txt  main.py  nist.py  requirements.txt
cpp/: CMakeLists.txt  main.cpp
py/: app.py  batch1m.txt  main.py  nist.py  requirements.txt
sts-2.1.2/: batch2m.txt  makefile
sts-2.1.2/experiments/AlgorithmTesting/: finalAnalysisReport.txt  freq.txt
sts-2.1.2/experiments/AlgorithmTesting/ApproximateEntropy/: results.txt  stats.txt
sts-2.1.2/experiments/AlgorithmTesting/BlockFrequency/: results.txt  stats.txt
sts-2.1.2/experiments/AlgorithmTesting/CumulativeSums/: data1.txt  data2.txt  results.txt  stats.txt
sts-2.1.2/experiments/AlgorithmTesting/FFT/: results.txt  stats.txt
sts-2.1.2/experiments/AlgorithmTesting/Frequency/: results.txt  stats.txt
sts-2.1.2/experiments/AlgorithmTesting/LinearComplexity/: results.txt  stats.txt
sts-2.1.2/experiments/AlgorithmTesting/LongestRun/: results.txt  stats.txt
sts-2.1.2/experiments/AlgorithmTesting/NonOverlappingTemplate/: data1.txt  data10.txt  data100.txt  data101.txt  data102.txt  data103.txt  data104.txt  data105.txt  data106.txt  data107.txt  data108.txt  data109.txt  data11.txt  data110.txt  data111.txt  data112.txt  data113.txt  data114.txt  data115.txt  data116.txt  data117.txt  data118.txt  data119.txt  data12.txt  data120.txt  data121.txt  data122.txt  data123.txt  data124.txt  data125.txt  data126.txt  data127.txt  data128.txt  data129.txt  data13.txt  data130.txt  data131.txt  data132.txt  data133.txt  data134.txt  (+110 more)
(+42 files in other folders)
